loader and filter ready

--- a/my-app/src/components/HeroList/HeroesList.module.css
+++ b/my-app/src/components/HeroList/HeroesList.module.css
@@ -1,5 +1,7 @@
 .heroesList {
-  display: flex;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
   margin-top: 50px;
   justify-content: space-between;
+  padding-right: 100px;
 }
